changes in activity page, editor's tabs and scrollbar issues in dashboard page.

--- a/public/redesign/css/style.css
+++ b/public/redesign/css/style.css
@@ -803,17 +803,14 @@ main section.collection .main-intro .table-row .c-form .search:focus {
   outline: none;
 }
 main section.collection .main-intro .table-row .c-form select {
-  padding: 16px 57px 13px 12px;
-  font-family: var(--main-font-family);
-  font-size: 20px;
-  font-style: normal;
-  font-weight: var(--light-font);
-  line-height: normal;
+  padding: 16px 57px 13px 12px !important;
+  font: normal var(--light-font) 20px/normal var(--main-font-family) !important;
   color: #222436;
   background: none;
   border-radius: 0 !important;
 }
 main section.collection .main-intro .table-row .c-form select.form-control {
+  font: normal var(--light-font) 20px/normal var(--main-font-family) !important;
   border: 1px solid #000000 !important;
 }
 main section.collection .main-intro .table-row .c-form .reset-btn {
@@ -821,11 +818,7 @@ main section.collection .main-intro .table-row .c-form .reset-btn {
   background-color: #000000 !important;
   border-radius: 0;
   padding: 15px 40px;
-  font-family: var(--main-font-family);
-  font-style: normal;
-  font-weight: var(--regular-font);
-  font-size: 20px;
-  line-height: 23px;
+  font: normal var(--light-font) 20px/normal var(--main-font-family) !important;
   color: #ffffff;
 }
 
@@ -912,6 +905,7 @@ input[type=text].form-control,
 select.form-control {
   border: 1px solid #000 !important;
   border-radius: 0 !important;
+  font: normal var(--light-font) 20px/normal var(--main-font-family) !important;
   color: #000;
 }
 input[type=text].form-control::placeholder,
@@ -923,11 +917,7 @@ select.form-control::placeholder {
   width: fit-content;
   background-color: #000000 !important;
   border-radius: 0;
-  font-family: var(--main-font-family);
-  font-style: normal;
-  font-weight: var(--regular-font);
-  font-size: 20px;
-  line-height: 23px;
+  font: normal var(--light-font) 20px/normal var(--main-font-family) !important;
   color: #ffffff;
 }
 .reset-btn:hover {
@@ -963,6 +953,9 @@ select.form-control::placeholder {
 
 .activity-table td {
   text-align: center;
+  font: normal var(--light-font) 20px/normal var(--main-font-family);
+  padding: 10px 9px;
+  color: #515151;
 }
 
 main section.main-page {
@@ -970,8 +963,7 @@ main section.main-page {
   position: relative;
 }
 main section.main-page .main-intro {
-  margin-top: 5px;
-  height: calc(100dvh - 53px);
+  height: calc(100dvh - 52px);
   overflow: auto;
 }
 main section.main-page .main-intro .intro-row {
@@ -2206,7 +2198,7 @@ main section.editor .editor-view .row .side-col .top-div .outside .editor-commen
 }
 main section.editor .editor-view .row .side-col .card-div {
   margin: 0;
-  height: calc(100vh - 210px);
+  height: calc(100vh - 180px);
 }
 main section.editor .editor-view .row .side-col .card-div .card-row {
   border: 1px solid #222436;
@@ -2492,8 +2484,7 @@ main section.editor .editor-view .row .main-col .editor-actions .action i {
 }
 .tabs-container .view-360 img {
   filter: contrast(2);
-  width: 30px !important;
-  height: 30px !important;
+  width: 38px !important;
 }
 
 .tab .surface-name {
