--- a/public/redesign/scss/_editor.scss
+++ b/public/redesign/scss/_editor.scss
@@ -142,7 +142,7 @@ main {
                     .card-div {
                         margin: 0;
                         //border-radius:5px !important;
-                        height: calc(100vh - 210px);
+                        height: calc(100vh - 180px);
                         // padding: 20px;
 
 
@@ -457,8 +457,8 @@ main {
                 filter: contrast(2);
             //all: unset !important;
             //z-index: unset !important;
-            width: 30px !important;
-            height: 30px !important;
+            width: 38px !important;
+            //height: 30px !important;
         }
     }
 }
